Adjust after merging master.